--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
-    "mysql2": "^3.6.0"
+    "mysql2": "^3.6.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2"
