--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "mysql2": "^3.6.0",
     "validator": "^13.11.0"
   },
