--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
@@ -26,6 +27,7 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.2"
+    "@faker-js/faker": "^8.0.2",
+    "nodemon": "^3.0.1"
   }
 }
