--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "module-alias": "^2.2.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
+    "socket.io": "^4.7.2",
     "validator": "^13.11.0"
   },
   "devDependencies": {
